# Analyse-d-entretiens-d-artisans

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENCE.md  README.md  presentation.html  presentation_complete_reorganisee.html  pyproject.toml  search.js  src.html
.github/workflow/: ci.yml
.github/workflows/: ci.yml  docs.yml  release.yaml  release.yml
data/: list_tool.csv
data/annotation/: annoted_score_intimite.csv  sentenced_annoted_v1_augmented.csv
data/hyperparamètres/:  expert_bert_tuning_results.csv  imaginaire_bert_tuning_results.csv  émotions_bert_tuning_results.csv
data/interviews/: recap_entretien.csv
data/interviews/processed/: cleaned_full.csv  cleaned_paragraph.csv  cleaned_sentence.csv
data/interviews/raw/: Entretien 01 24.10.03 01_traitement_A.docx  Entretien 01 24.10.03 02_traitement_A.docx  Entretien 01 24.10.03 03_traitement_A.docx  Entretien 01 25.01.14 03ab_traitement_A.docx  Entretien 01 25.01.14 04ab_traitement_A.docx  Entretien 01 25.01.14 05ab_traitement_A.docx  Entretien 01 25.01.15 01_traitement_A.docx  Entretien 01 25.01.15 02_traitement_A.docx  Entretien 01 25.01.15 04_traitement_A.docx  Entretien 01 25.01.15 05_traitement_A.docx  Entretien 01 25.03.13 01_traitement_A.docx  Entretien 01 25.03.27 01_traitement_A.docx  (+17 more)
data/intimite/:  expert_bert_hyperparam.csv  fertilité du language_bert_tuning_results.csv  fluidité_bert_tuning_results.csv  intimité_bert_tuning_results.csv
data/processed/: cleaned_full.csv  cleaned_sentence.csv
data/processed_tool_comparaison_strict/: cleaned_full_tool_dict.csv  cleaned_full_with_tools.csv  cleaned_paragraph_tool_dict.csv  cleaned_paragraph_with_tools.csv  cleaned_sentence_tool_dict.csv  cleaned_sentence_with_tools.csv
data/processed_tool_ner/: cleaned_full.csv  cleaned_paragraph.csv  cleaned_sentence.csv  tool_dictionary.csv
data/raw/: Entretien 01 24.10.04 01_traitement_A.docx  Entretien 01 24.10.04 02_traitement_A.docx  Entretien 01 24.10.04 03_traitement_A.docx  Entretien 01 24.10.04 04_traitement.docx  Entretien 01 24.11.28_traitement_A.docx  Entretien 01 24.12.03_traitement_A.docx  Entretien 01 24.12.09ab_traitement_A.docx  Entretien 01 24.12.16_traitement_A.docx  Entretien 01 24.12.26_traitement_A.docx  Entretien 01 25.01.08_traitement_A.docx  Entretien 01 25.01.14 02ab_traitement_A.docx  Entretien 01 25.01.15 02_traitement_A.docx  Entretien 01 25.01.15 03_traitement_A.docx  Entretien 01 25.02.13_traitement_A.docx  Entretien 01 25.03.12_traitement_A.docx  Entretien 01 25.03.13 02_traitement_A.docx  Entretien 01 25.03.13 03_traitement_A.docx  Entretien 01 25.03.28 03_traitement_A.docx  Entretien 01 25.04.03 01ab_traitement_A.docx  Entretien 01 25.04.03 03_traitement_A.docx  Entretien 01 25.04.03 04_traitement_A.docx  Entretien 01 25.04.05_traitement_A.docx  Entretien 01 25.04.10_traitement_A.docx  Entretien 01 25.05.22 01_traitement_A.docx  Entretien 01 25.05.22 03_traitement_A.docx  Entretien 01 25.05.22 06_traitement_A.docx  Entretien 01 25.06.11_traitement_A.docx
data/verbalisation/: bert_tuning_results.csv  difficulte_verbalisation_regression_tuning.csv  hyperparams_reg_tuned.csv  verbalisation_bert.csv  verbalisation_reg.csv
docs/: perf models.txt  search.js  src.html
docs/presentation/: presentation.html
docs/src/: preprocessing.html  processing.html  utils.html
docs/src/utils/: csv_to_html.html  (+5 more)
docs/tutorials/: tutorial.md
models/: verbalisation_best_params.pkl  verbalisation_regressor.pkl  verbalisation_vectorizer.pkl
models/bert_final/: hyperparams.json
results/intimite/: Vulnerable_loss.txt  all_scores_predictions.csv  fertilité du language_loss.txt  fluidité_loss.txt  imaginaire_loss.txt  intimité_loss.txt
results/tool_comparaison/: cleaned_full_tool_dict.html  cleaned_paragraph_with_tools_highlight.html  cleaned_sentence_with_tools_highlight.html  dict_outils_artisanat.csv  dict_outils_artisanat.html  dict_outils_materiau.csv  dict_outils_materiau.html
results/verbalisation/: difficulte_verbalisation_bert.html  difficulte_verbalisation_bert_v2.html  difficulte_verbalisation_regression.html  difficulte_verbalisation_regression_v2.html  difficulté_verbalisation_loss.txt  merged_predictions.csv  merged_predictions_comparaison.csv  merged_predictions_comparaison.html  verbalisation_predict_regression.csv  verbalisation_predict_regression.html
scripts/: 1_clean.py  3_detect_tools.py  bert_artisan_cli.py  multiple_bert_models.py
src/: preprocessing.html  processing.html  utils.html
src/preprocessing/: extract_tool_wiki.html  extract_tool_wiki.py  text_augmentation.html  text_augmentation.py  text_cleaning.html  text_cleaning.py  text_preparation_for_anotation.html  text_preparation_for_anotation.py
src/processing/: build_tool_dicts.html  build_tool_dicts.py  predict_bert.html  predict_bert.py  predict_regression.html  predict_regression.py  predict_verbalisation_bert.html  predict_verbalisation_bert.py  predict_verbalisation_regression.html  predict_verbalisation_regression.py  statistiques_correlation.html  statistiques_correlation.py  tool_detection_ner_pretrained.html  tool_detection_ner_pretrained.py  tool_detection_word_comparaison_strict.html  tool_detection_word_comparaison_strict.py  train_bert.html  train_bert.py  train_regression.html  train_verbalisation_bert.html  train_verbalisation_bert.py  train_verbalisation_regression.html  train_verbalisation_regression.py  tune_bert.html  tune_bert.py  tune_regression.html  tune_regression.py  tune_verbalisation_bert.html  tune_verbalisation_bert.py  tune_verbalisation_hyperparams.html  tune_verbalisation_hyperparams.py
src/utils/: csv_to_html.html  csv_to_html.py  csv_to_html_highlight_tool.html  csv_to_html_highlight_tool.py  export.py  generate_verbalisation_report.html  generate_verbalisation_report.py  generate_verbalisation_report_v2.html  generate_verbalisation_report_v2.py  logger_config.html  logger_config.py  merge_prediction_verbalisation.html  merge_prediction_verbalisation.py
tests/: conftest.py  test_bert.py  test_csv_highlight.py  test_merge_predictions.py  test_text_cleaning.py
(+91 files in other folders)
