[tool.poetry]
name = "bert-artisan-nlp"
version = "0.5.1"
description = "Analyse automatique d'entretiens d'artisans avec NER"
authors = ["Aymeric Eyer <aymeric.eyer@gmail.com>"]
license = "MIT"  # À vérifier
readme = "README.md"
repository = "https://github.com/Aymeric-e/Analyse-d-entretiens-d-artisans"
keywords = ["nlp", "ner", "bert", "artisan", "interview"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Natural Language :: French"
]


packages = [
    { include = "processing", from = "src" },
    { include = "preprocessing", from = "src" },
    { include = "utils", from = "src" }
]

include = ["README.md", "src/*", "pyproject.toml","scripts/*", "tests/*"]
exclude = [ "data"]


[tool.poetry.dependencies]
python = "^3.10"

# Core NLP & ML
transformers = "^4.35.0"
sacremoses = "^0.0.41" 
nlpaug = "^1.1.10"
nltk = "^3.8.0"
scikit-learn = "^1.4.0"
joblib = "^1.4.0"
datasets = "^2.14.0"
torch = "^2.2.0"
shap = "^0.44.0"
statsmodels = "0.14.6"

# Data processing
pandas = "^2.1.0"
numpy = "^1.26.0"

# File handling
python-docx = "^1.1.0"

# Utilities
tqdm = "^4.66.0"
protobuf = "^4.20.0"  # Nécessaire pour transformers

# Scraping
requests = "^2.32.0"
beautifulsoup4 = "^4.12.0"
pyarrow = "^22.0.0"
accelerate = ">=0.26.0"
logging = "^0.4.9.6"

#Visualisation
matplotlib = "^3.8.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
pylint = "^3.0.0"
pre-commit = "^3.5.0"  # Pour les hooks git
pdoc = "^14.0"  # Pour la génération de documentation
ruff = "^0.14.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configuration des outils
[tool.black]
line-length = 130
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 130
src_paths = ["src"]
known_first_party = ["processing", "preprocessing", "utils"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/bert_artisan_nlp --cov-report=html"

[tool.ruff.lint]
ignore = ["E402"]
